--- a/index.html
+++ b/index.html
@@ -3,193 +3,233 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manos Unidas - Organización Social</title>
+    <title>TEESSA – Fundación</title>
+    <link rel="icon" href="/img/teessa_logo.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <header id="header">
-        <div class="container">
-            <div class="header-content">
-                <div class="logo">
-                    <img src="./img/teessa_logo.png" alt="logo teessa">
-                  
+<header id="header">
+    <div class="container">
+        <div class="header-content">
+            <div class="logo"></div>
+            <nav>
+                <div class="menu-toggle" id="menuToggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
-                <nav>
-                    <div class="menu-toggle" id="menuToggle">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
-                    <ul id="navMenu">
-                        <li><a href="#home" class="nav-link active">Inicio</a></li>
-                        <li><a href="#about" class="nav-link">Nosotros</a></li>
-                        <li><a href="#projects" class="nav-link">Proyectos</a></li>
-                        <li><a href="#impact" class="nav-link">Impacto</a></li>
-                        <li><a href="#volunteer" class="nav-link">Voluntariado</a></li>
-                        <li><a href="#contact" class="nav-link">Contacto</a></li>
-                    </ul>
-                </nav>
-            </div>
+                <ul id="navMenu">
+                    <li><a href="#home" class="nav-link active">Inicio</a></li>
+                    <li><a href="#about" class="nav-link">Nosotros</a></li>
+                    <li><a href="#pillars" class="nav-link">Pilares</a></li>
+                    <li><a href="#projects" class="nav-link">Proyectos</a></li>
+                    <li><a href="#impact" class="nav-link">Impacto</a></li>
+                    <li><a href="#volunteer" class="nav-link">Voluntariado</a></li>
+                    <li><a href="#contact" class="nav-link">Contacto</a></li>
+                </ul>
+            </nav>
         </div>
-    </header>
+    </div>
+</header>
 
-    <section id="home" class="hero">
-        <div class="container">
-            <div class="hero-content">
-                <h1>Juntos Creamos un Mejor Futuro</h1>
-                <p>Transformando comunidades a través del compromiso y la solidaridad</p>
-                <a href="#projects" class="btn">Descubre Nuestro Impacto</a>
-            </div>
-        </div>
-    </section>
-
-    <section id="about">
-        <div class="container">
-            <h2 class="section-title">¿Quiénes Somos?</h2>
-            <div class="content-grid">
-                <div class="card">
-                    <div class="image-placeholder">💡 Misión</div>
-                    <h3>Nuestra Misión</h3>
-                    <p>Promover el desarrollo integral de comunidades vulnerables mediante programas sostenibles de educación, salud y desarrollo económico.</p>
-                </div>
-                <div class="card">
-                    <div class="image-placeholder">🎯 Visión</div>
-                    <h3>Nuestra Visión</h3>
-                    <p>Ser una organización líder en transformación social, reconocida por nuestro impacto positivo y compromiso con la equidad y justicia social.</p>
-                </div>
-                <div class="card">
-                    <div class="image-placeholder">❤️ Valores</div>
-                    <h3>Nuestros Valores</h3>
-                    <p>Solidaridad, transparencia, compromiso, respeto e inclusión guían cada una de nuestras acciones y relaciones con la comunidad.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="projects">
-        <div class="container">
-            <h2 class="section-title">Proyectos Activos</h2>
-            <div class="content-grid">
-                <div class="card">
-                    <div class="image-placeholder">📚 Educación</div>
-                    <h3>Programa Educativo Integral</h3>
-                    <p>Becas escolares, apoyo académico y talleres de formación para más de 800 estudiantes en situación de vulnerabilidad.</p>
-                </div>
-                <div class="card">
-                    <div class="image-placeholder">🍲 Nutrición</div>
-                    <h3>Comedores Solidarios</h3>
-                    <p>Red de comedores comunitarios que brindan alimentación balanceada a 1,500 familias diariamente.</p>
-                </div>
-                <div class="card">
-                    <div class="image-placeholder">🏥 Salud</div>
-                    <h3>Atención Médica Gratuita</h3>
-                    <p>Campañas preventivas, consultas médicas y suministro de medicamentos para comunidades de bajos recursos.</p>
-                </div>
-                <div class="card">
-                    <div class="image-placeholder">💼 Empleo</div>
-                    <h3>Capacitación Laboral</h3>
-                    <p>Talleres de oficios, formación técnica y programas de inserción laboral para jóvenes y adultos.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="impact">
-        <div class="container">
-            <h2 class="section-title">Nuestro Impacto en Números</h2>
-            <div class="stats">
-                <div class="stat-card">
-                    <span class="stat-number" data-target="15000">0</span>
-                    <div class="stat-label">Personas Ayudadas</div>
-                </div>
-                <div class="stat-card">
-                    <span class="stat-number" data-target="50">0</span>
-                    <div class="stat-label">Proyectos Activos</div>
-                </div>
-                <div class="stat-card">
-                    <span class="stat-number" data-target="200">0</span>
-                    <div class="stat-label">Voluntarios</div>
-                </div>
-                <div class="stat-card">
-                    <span class="stat-number" data-target="8">0</span>
-                    <div class="stat-label">Años de Experiencia</div>
-                </div>
-            </div>
-
-            <div class="video-container">
-                <div class="video-placeholder">
-                    <span style="font-size: 3rem; margin-bottom: 1rem;">▶️</span>
-                    <span>Historias que Inspiran</span>
-                    <small style="margin-top: 0.5rem; opacity: 0.7;">Video de testimonios</small>
-                </div>
-            </div>
-
-        </div>
-    </section>
-
-    <section id="volunteer">
-        <div class="container">
-            <h2 class="section-title">Sé Parte del Cambio</h2>
-            <div class="content-grid">
-                <div class="card">
-                    <h3>¿Por Qué Voluntariar?</h3>
-                    <p>Cada hora que dedicas marca una diferencia real. Únete a una comunidad de personas comprometidas con generar cambios positivos duraderos.</p>
-                </div>
-                <div class="card">
-                    <h3>Áreas de Participación</h3>
-                    <p>Educación, salud, eventos, recaudación de fondos, comunicación, administración. Encuentra el área que mejor se adapte a tus habilidades.</p>
-                </div>
-                <div class="card">
-                    <h3>Cómo Empezar</h3>
-                    <p>Inscríbete en nuestro programa de voluntariado. Te brindaremos capacitación y todo el apoyo necesario para que tu experiencia sea enriquecedora.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="contact">
-        <div class="container">
-            <h2 class="section-title">Contáctanos</h2>
-            <p class="contact-description">
-                Estamos aquí para responder tus preguntas y recibir tus propuestas de colaboración.
+<section id="home" class="hero">
+    <div class="container">
+        <div class="hero-content">
+            <h1>Capacitando el Mañana</h1>
+            <p>
+                Construimos oportunidades a través de la educación, el trabajo y el compromiso social
             </p>
-            <div class="content-grid">
-                <div class="card">
-                    <h3>📧 Email</h3>
-                    <p>info@manosunidas.org<br>contacto@manosunidas.org</p>
-                </div>
-                <div class="card">
-                    <h3>📱 Teléfono</h3>
-                    <p>+54 (266) 123-4567<br>WhatsApp: +54 9 266 765-4321</p>
-                </div>
-                <div class="card">
-                    <h3>📍 Ubicación</h3>
-                    <p>Av. Principal 456<br>Villa Mercedes, San Luis</p>
-                </div>
+            <a href="#about" class="btn">Conocé Nuestra Fundación</a>
+        </div>
+    </div>
+</section>
+
+<section id="about">
+    <div class="container">
+        <h2 class="section-title">¿Quiénes Somos?</h2>
+
+        <div class="content-grid">
+            <div class="card">
+                <div class="icon">💡</div>
+                <h3>Nuestra Misión</h3>
+                <p>
+                    Brindar oportunidades de capacitación y desarrollo para que las personas puedan alcanzar su máximo potencial y contribuir al bienestar de la sociedad.
+                </p>
+            </div>
+
+            <div class="card">
+                <div class="icon">🎯</div>
+                <h3>Nuestra Visión</h3>
+                <p>
+                    Ser una fundación referente en formación y transformación social, promoviendo una sociedad más equitativa, consciente y preparada para los desafíos del mañana.
+                </p>
+            </div>
+
+            <div class="card">
+                <div class="icon">❤️</div>
+                <h3>Nuestros Valores</h3>
+                <p>
+                    Solidaridad, compromiso, transparencia, respeto e inclusión orientan cada una de nuestras acciones.
+                </p>
             </div>
         </div>
-    </section>
 
-    <footer>
-        <div class="container">
-            <h3>Conecta con Nosotros</h3>
-            <div class="social-links">
-                <a href="#">FB</a>
-                <a href="#">IG</a>
-                <a href="#">TW</a>
-                <a href="#">YT</a>
-                <a href="#">IN</a>
-                <a href="#">WA</a>
-            </div>
-            <p class="copyright">
-                © 2024 Manos Unidas. Todos los derechos reservados. | Organización sin fines de lucro
+        <div class="card" style="margin-top: 3rem;">
+            <h3>Capacitando el Mañana</h3>
+            <p>
+                TEESSA Fundación se dedica a capacitar a personas de todas las edades y sectores, con el objetivo de mejorar su calidad de vida, su desempeño en el mercado laboral, su participación productiva en la sociedad y el crecimiento cultural de la comunidad.
+            </p>
+
+            <ul>
+                <li>
+                    <strong>Objetivo Nº 01:</strong> Fortalecer aptitudes laborales y educativas mediante el desarrollo de habilidades técnicas y blandas que mejoren la empleabilidad y el desempeño laboral.
+                </li>
+                <li>
+                    <strong>Objetivo Nº 02:</strong> Fomentar prácticas sostenibles y responsables de capacitación continua y actualización de conocimientos en áreas vinculadas al trabajo, educación, economía, salud, seguridad y ambiente.
+                </li>
+                <li>
+                    <strong>Objetivo Nº 03:</strong> Desarrollar iniciativas que promuevan la apropiación de recursos y herramientas para mejorar la calidad de vida de la sociedad en función de las necesidades actuales.
+                </li>
+            </ul>
+        </div>
+
+        <div class="card" style="margin-top: 2rem;">
+            <h3>Programas y Servicios</h3>
+            <ul>
+                <li>Capacitación laboral y educativa</li>
+                <li>Talleres, charlas, cursos, seminarios y conferencias</li>
+                <li>Asesoramiento y mentoría</li>
+                <li>Acceso a recursos y herramientas para el desarrollo personal y profesional</li>
+            </ul>
+
+            <h3 style="margin-top: 1.5rem;">¿Cómo podés participar?</h3>
+            <ul>
+                <li>Siendo miembro de la Fundación</li>
+                <li>Inscribiéndote en nuestros eventos y actividades</li>
+                <li>Colaborando como voluntario o donante</li>
+                <li>Difundiendo nuestra misión y objetivos en redes sociales</li>
+            </ul>
+
+            <p style="margin-top: 1rem;">
+                Sumarte a esta misión nos permite construir una sociedad más consciente, comprometida y preparada para el futuro.
             </p>
         </div>
-    </footer>
+    </div>
+</section>
 
-    <button class="scroll-top" id="scrollTop">↑</button>
+<section id="pillars">
+    <div class="container">
+        <h2 class="section-title">Nuestros Pilares de Acción</h2>
 
-    <script src="app.js"></script>
+        <div class="content-grid pillars-grid">
+
+            <div class="card pillar-card">
+                <div class="pillar-icon">
+                    <svg viewBox="0 0 24 24">
+                        <path d="M3 7h18v13H3zM8 7V5a4 4 0 018 0v2" />
+                    </svg>
+                </div>
+                <h3>Trabajo</h3>
+                <p>
+                    Una mirada a los desafíos del mañana a través de los nuevos perfiles laborales, promoviendo la inclusión, la capacitación continua y el desarrollo de oficios.
+                </p>
+            </div>
+
+            <div class="card pillar-card">
+                <div class="pillar-icon">
+                    <svg viewBox="0 0 24 24">
+                        <path d="M12 3L2 9l10 6 10-6-10-6zM2 9v6l10 6 10-6V9" />
+                    </svg>
+                </div>
+                <h3>Educación</h3>
+                <p>
+                    Pilar fundamental de la sociedad para asegurar el futuro deseado, garantizando el acceso equitativo al conocimiento y al aprendizaje permanente.
+                </p>
+            </div>
+
+            <div class="card pillar-card">
+                <div class="pillar-icon">
+                    <svg viewBox="0 0 24 24">
+                        <path d="M12 1v22M5 5h14M5 19h14M7 9h10M7 15h10" />
+                    </svg>
+                </div>
+                <h3>Economía</h3>
+                <p>
+                    La administración responsable de los recursos humanos y económicos como base para una sociedad sostenible y equitativa.
+                </p>
+            </div>
+
+            <div class="card pillar-card">
+                <div class="pillar-icon">
+                    <svg viewBox="0 0 24 24">
+                        <path d="M12 21s-7-4.35-7-10a4 4 0 018-2 4 4 0 018 2c0 5.65-7 10-7 10z" />
+                    </svg>
+                </div>
+                <h3>Salud</h3>
+                <p>
+                    Promoción del bienestar físico, mental y emocional mediante acciones de prevención y acceso a la atención primaria.
+                </p>
+            </div>
+
+            <div class="card pillar-card">
+                <div class="pillar-icon">
+                    <svg viewBox="0 0 24 24">
+                        <path d="M12 2l8 4v6c0 5-3.5 9-8 10-4.5-1-8-5-8-10V6l8-4z" />
+                    </svg>
+                </div>
+                <h3>Seguridad</h3>
+                <p>
+                    Protección integral de los derechos humanos y fortalecimiento de entornos comunitarios seguros.
+                </p>
+            </div>
+
+            <div class="card pillar-card">
+                <div class="pillar-icon">
+                    <svg viewBox="0 0 24 24">
+                        <path d="M12 2C7 2 4 6 4 10c0 6 8 12 8 12s8-6 8-12c0-4-3-8-8-8z" />
+                    </svg>
+                </div>
+                <h3>Ambiente</h3>
+                <p>
+                    Cuidado del ambiente y promoción de la conciencia ecológica como responsabilidad colectiva.
+                </p>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+<section id="projects">
+    <div class="container">
+        <h2 class="section-title">Proyectos</h2>
+    </div>
+</section>
+
+<section id="impact">
+    <div class="container">
+        <h2 class="section-title">Nuestro Impacto</h2>
+    </div>
+</section>
+
+<section id="volunteer">
+    <div class="container">
+        <h2 class="section-title">Voluntariado</h2>
+    </div>
+</section>
+
+<section id="contact">
+    <div class="container">
+        <h2 class="section-title">Contacto</h2>
+    </div>
+</section>
+
+<footer>
+    <div class="container">
+        <p>© 2024 TEESSA – Fundación sin fines de lucro</p>
+    </div>
+</footer>
+
+<script src="app.js"></script>
 </body>
 </html>
