--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a href="#projects" class="nav-link">Proyectos</a></li>
                     <li><a href="#impact" class="nav-link">Impacto</a></li>
                     <li><a href="#volunteer" class="nav-link">Voluntariado</a></li>
-                    <li><a href="#contact" class="nav-link">Contacto</a></li>
+                    <li><a href="#footer" class="nav-link">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -49,74 +49,116 @@
     <div class="container">
         <h2 class="section-title">¿Quiénes Somos?</h2>
 
+        <p class="section-intro">
+            Somos una fundación comprometida con la formación, el desarrollo humano y la transformación social,
+            generando oportunidades reales para construir un futuro mejor.
+        </p>
+
         <div class="content-grid">
             <div class="card">
                 <div class="icon">💡</div>
-                <h3>Nuestra Misión</h3>
+                <h3>Misión</h3>
+                <p class="card-highlight">
+                    Impulsar el desarrollo de las personas a través de la capacitación y el conocimiento.
+                </p>
                 <p>
-                    Brindar oportunidades de capacitación y desarrollo para que las personas puedan alcanzar su máximo potencial y contribuir al bienestar de la sociedad.
+                    Brindamos herramientas que fortalecen habilidades, potencian oportunidades laborales
+                    y promueven una participación activa en la sociedad.
                 </p>
             </div>
 
             <div class="card">
                 <div class="icon">🎯</div>
-                <h3>Nuestra Visión</h3>
+                <h3>Visión</h3>
+                <p class="card-highlight">
+                    Ser referentes en formación y transformación social.
+                </p>
                 <p>
-                    Ser una fundación referente en formación y transformación social, promoviendo una sociedad más equitativa, consciente y preparada para los desafíos del mañana.
+                    Aspiramos a una sociedad más equitativa, consciente y preparada para los desafíos actuales
+                    y futuros.
                 </p>
             </div>
 
             <div class="card">
                 <div class="icon">❤️</div>
-                <h3>Nuestros Valores</h3>
-                <p>
-                    Solidaridad, compromiso, transparencia, respeto e inclusión orientan cada una de nuestras acciones.
-                </p>
+                <h3>Valores</h3>
+                <ul class="values-list">
+                    <li>Solidaridad</li>
+                    <li>Compromiso</li>
+                    <li>Transparencia</li>
+                    <li>Respeto</li>
+                    <li>Inclusión</li>
+                </ul>
             </div>
         </div>
 
-        <div class="card" style="margin-top: 3rem;">
-            <h3>Capacitando el Mañana</h3>
-            <p>
-                TEESSA Fundación se dedica a capacitar a personas de todas las edades y sectores, con el objetivo de mejorar su calidad de vida, su desempeño en el mercado laboral, su participación productiva en la sociedad y el crecimiento cultural de la comunidad.
+        <div class="card section-card">
+            <h3>Nuestro Propósito</h3>
+            <p class="card-highlight">
+                Capacitar hoy para transformar el mañana.
             </p>
 
-            <ul>
-                <li>
-                    <strong>Objetivo Nº 01:</strong> Fortalecer aptitudes laborales y educativas mediante el desarrollo de habilidades técnicas y blandas que mejoren la empleabilidad y el desempeño laboral.
-                </li>
-                <li>
-                    <strong>Objetivo Nº 02:</strong> Fomentar prácticas sostenibles y responsables de capacitación continua y actualización de conocimientos en áreas vinculadas al trabajo, educación, economía, salud, seguridad y ambiente.
-                </li>
-                <li>
-                    <strong>Objetivo Nº 03:</strong> Desarrollar iniciativas que promuevan la apropiación de recursos y herramientas para mejorar la calidad de vida de la sociedad en función de las necesidades actuales.
-                </li>
-            </ul>
+            <p>
+                TEESSA Fundación trabaja con personas de todas las edades y sectores,
+                promoviendo el crecimiento personal, laboral y cultural de la comunidad.
+            </p>
+
+            <div class="objectives">
+                <div class="objective">
+                    <span>01</span>
+                    <p>
+                        Fortalecer aptitudes laborales y educativas mediante habilidades técnicas y blandas.
+                    </p>
+                </div>
+                <div class="objective">
+                    <span>02</span>
+                    <p>
+                        Promover la capacitación continua en áreas clave como trabajo, educación, salud,
+                        economía, seguridad y ambiente.
+                    </p>
+                </div>
+                <div class="objective">
+                    <span>03</span>
+                    <p>
+                        Impulsar iniciativas que mejoren la calidad de vida según las necesidades actuales.
+                    </p>
+                </div>
+            </div>
         </div>
 
-        <div class="card" style="margin-top: 2rem;">
-            <h3>Programas y Servicios</h3>
-            <ul>
-                <li>Capacitación laboral y educativa</li>
-                <li>Talleres, charlas, cursos, seminarios y conferencias</li>
-                <li>Asesoramiento y mentoría</li>
-                <li>Acceso a recursos y herramientas para el desarrollo personal y profesional</li>
-            </ul>
+        <div class="card section-card">
+            <h3>Programas y Participación</h3>
 
-            <h3 style="margin-top: 1.5rem;">¿Cómo podés participar?</h3>
-            <ul>
-                <li>Siendo miembro de la Fundación</li>
-                <li>Inscribiéndote en nuestros eventos y actividades</li>
-                <li>Colaborando como voluntario o donante</li>
-                <li>Difundiendo nuestra misión y objetivos en redes sociales</li>
-            </ul>
+            <div class="two-columns">
+                <div>
+                    <h4>Programas</h4>
+                    <ul>
+                        <li>Capacitación laboral y educativa</li>
+                        <li>Talleres, cursos y seminarios</li>
+                        <li>Charlas y conferencias</li>
+                        <li>Asesoramiento y mentoría</li>
+                    </ul>
+                </div>
 
-            <p style="margin-top: 1rem;">
-                Sumarte a esta misión nos permite construir una sociedad más consciente, comprometida y preparada para el futuro.
+                <div>
+                    <h4>Cómo participar</h4>
+                    <ul>
+                        <li>Ser miembro de la Fundación</li>
+                        <li>Participar en eventos y actividades</li>
+                        <li>Colaborar como voluntario o donante</li>
+                        <li>Difundir nuestra misión</li>
+                    </ul>
+                </div>
+            </div>
+
+            <p class="section-cta">
+                Sumarte es ser parte activa de una sociedad más consciente,
+                comprometida y preparada para el futuro.
             </p>
         </div>
     </div>
 </section>
+
 
 <section id="pillars">
     <div class="container">
@@ -218,17 +260,33 @@
     </div>
 </section>
 
-<section id="contact">
+<footer id="footer">
     <div class="container">
-        <h2 class="section-title">Contacto</h2>
-    </div>
-</section>
+        <div class="footer-socials">
+            <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram" class="ig">
+                <img src="img/instagram.svg" alt="Instagram">
+            </a>
 
-<footer>
-    <div class="container">
-        <p>© 2024 TEESSA – Fundación sin fines de lucro</p>
+            <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook" class="fb">
+                <img src="img/facebook.svg" alt="Facebook">
+            </a>
+
+            <a href="https://wa.me/549XXXXXXXXXX" target="_blank" aria-label="WhatsApp" class="wa">
+                <img src="img/whatsapp-svgrepo-com.svg" alt="WhatsApp">
+            </a>
+
+            <a href="mailto:contacto@tudominio.com" aria-label="Email" class="mail">
+                <img src="img/mail-svgrepo-com.svg" alt="Email">
+            </a>
+        </div>
+
+        <p class="footer-text">
+            © 2025 · Todos los derechos reservados
+        </p>
     </div>
 </footer>
+
+
 
 <script src="app.js"></script>
 </body>
