--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <ul id="navMenu">
                     <li><a href="#home" class="nav-link active">Inicio</a></li>
                     <li><a href="#about" class="nav-link">Nosotros</a></li>
-                    <li><a href="#pillars" class="nav-link">Pilares</a></li>
                     <li><a href="#projects" class="nav-link">Proyectos</a></li>
+                    <li><a href="#pillars" class="nav-link">Pilares</a></li>
                     <li><a href="#impact" class="nav-link">Impacto</a></li>
                     <li><a href="#volunteer" class="nav-link">Voluntariado</a></li>
                     <li><a href="#footer" class="nav-link">Contacto</a></li>
@@ -36,14 +36,25 @@
 <section id="home" class="hero">
     <div class="container">
         <div class="hero-content">
-            <h1>Capacitando el Mañana</h1>
+
+            <img 
+                src="img/TEESSA_Logotipo_Principal_Color_Claim.png" 
+                alt="Logo de la Fundación"
+                class="hero-logo"
+            >
+
+           
+
             <p>
                 Construimos oportunidades a través de la educación, el trabajo y el compromiso social
             </p>
+
             <a href="#about" class="btn">Conocé Nuestra Fundación</a>
+
         </div>
     </div>
 </section>
+
 
 <section id="about">
     <div class="container">
@@ -92,6 +103,8 @@
             </div>
         </div>
 
+
+  <h1>Propósitos</h1>
         <div class="card section-card">
             <h3>Nuestro Propósito</h3>
             <p class="card-highlight">
@@ -159,6 +172,27 @@
     </div>
 </section>
 
+
+<section id="projects">
+    <div class="container">
+        <h2 class="section-title">Proyectos</h2>
+        <p class="section-intro">Aquí presentamos nuestros proyectos activos y en desarrollo. Podés añadir tarjetas, enlaces o una galería para mostrar cada iniciativa.</p>
+        <div class="content-grid">
+            <div class="card">
+                <h4>Proyecto 1</h4>
+                <p>Descripción corta del proyecto, su objetivo y estado.</p>
+            </div>
+            <div class="card">
+                <h4>Proyecto 2</h4>
+                <p>Descripción corta del proyecto, su objetivo y estado.</p>
+            </div>
+            <div class="card">
+                <h4>Proyecto 3</h4>
+                <p>Descripción corta del proyecto, su objetivo y estado.</p>
+            </div>
+        </div>
+    </div>
+</section>
 
 <section id="pillars">
     <div class="container">
@@ -239,12 +273,6 @@
             </div>
 
         </div>
-    </div>
-</section>
-
-<section id="projects">
-    <div class="container">
-        <h2 class="section-title">Proyectos</h2>
     </div>
 </section>
 
