--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
 
 
-  <h1>Propósitos</h1>
+  <br>
         <div class="card section-card">
             <h3>Nuestro Propósito</h3>
             <p class="card-highlight">
@@ -138,6 +138,7 @@
                 </div>
             </div>
         </div>
+        <br>
 
         <div class="card section-card">
             <h3>Programas y Participación</h3>
@@ -202,8 +203,11 @@
 
             <div class="card pillar-card">
                 <div class="pillar-icon">
-                    <svg viewBox="0 0 24 24">
-                        <path d="M3 7h18v13H3zM8 7V5a4 4 0 018 0v2" />
+                    <svg viewBox="0 0 24 24" role="img" aria-labelledby="trabajoTitle">
+                        <title id="trabajoTitle">Trabajo</title>
+                        <path d="M3 7h18v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7z"></path>
+                        <path d="M8 7V6a4 4 0 0 1 8 0v1"></path>
+                        <path d="M3 11h18" opacity="0.6"></path>
                     </svg>
                 </div>
                 <h3>Trabajo</h3>
@@ -214,8 +218,10 @@
 
             <div class="card pillar-card">
                 <div class="pillar-icon">
-                    <svg viewBox="0 0 24 24">
-                        <path d="M12 3L2 9l10 6 10-6-10-6zM2 9v6l10 6 10-6V9" />
+                    <svg viewBox="0 0 24 24" role="img" aria-labelledby="educacionTitle">
+                        <title id="educacionTitle">Educación</title>
+                        <path d="M4 6v12a1 1 0 0 0 1 1h14V5a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1z"></path>
+                        <path d="M18 5l-6 4-6-4" opacity="0.8"></path>
                     </svg>
                 </div>
                 <h3>Educación</h3>
@@ -226,8 +232,12 @@
 
             <div class="card pillar-card">
                 <div class="pillar-icon">
-                    <svg viewBox="0 0 24 24">
-                        <path d="M12 1v22M5 5h14M5 19h14M7 9h10M7 15h10" />
+                    <svg viewBox="0 0 24 24" role="img" aria-labelledby="economiaTitle">
+                        <title id="economiaTitle">Economía</title>
+                        <path d="M3 21V3h18v18H3z" opacity="0.04"></path>
+                        <path d="M7 15V9" stroke-width="1.6"></path>
+                        <path d="M12 15V7" stroke-width="1.6"></path>
+                        <path d="M17 15v-3" stroke-width="1.6"></path>
                     </svg>
                 </div>
                 <h3>Economía</h3>
@@ -238,8 +248,9 @@
 
             <div class="card pillar-card">
                 <div class="pillar-icon">
-                    <svg viewBox="0 0 24 24">
-                        <path d="M12 21s-7-4.35-7-10a4 4 0 018-2 4 4 0 018 2c0 5.65-7 10-7 10z" />
+                    <svg viewBox="0 0 24 24" role="img" aria-labelledby="saludTitle">
+                        <title id="saludTitle">Salud</title>
+                        <path d="M20.8 8.6a5.5 5.5 0 0 0-8.1-0.1L12 9.1l-0.6-0.6a5.5 5.5 0 1 0-7.8 7.8L12 21l8.8-8.6a5.5 5.5 0 0 0 0-7.8z"></path>
                     </svg>
                 </div>
                 <h3>Salud</h3>
@@ -250,8 +261,10 @@
 
             <div class="card pillar-card">
                 <div class="pillar-icon">
-                    <svg viewBox="0 0 24 24">
-                        <path d="M12 2l8 4v6c0 5-3.5 9-8 10-4.5-1-8-5-8-10V6l8-4z" />
+                    <svg viewBox="0 0 24 24" role="img" aria-labelledby="seguridadTitle">
+                        <title id="seguridadTitle">Seguridad</title>
+                        <path d="M12 2l7 3v5c0 5-3.5 9-7 10-3.5-1-7-5-7-10V5l7-3z"></path>
+                        <path d="M12 11v5" stroke-width="1.6" opacity="0.9"></path>
                     </svg>
                 </div>
                 <h3>Seguridad</h3>
@@ -262,8 +275,10 @@
 
             <div class="card pillar-card">
                 <div class="pillar-icon">
-                    <svg viewBox="0 0 24 24">
-                        <path d="M12 2C7 2 4 6 4 10c0 6 8 12 8 12s8-6 8-12c0-4-3-8-8-8z" />
+                    <svg viewBox="0 0 24 24" role="img" aria-labelledby="ambienteTitle">
+                        <title id="ambienteTitle">Ambiente</title>
+                        <path d="M21 11c-1-6-9-9-9-9S3 5 3 11c0 6 6 9 9 11 0 0 7-3 9-11z"></path>
+                        <path d="M14 11s-3 1-5 4" stroke-width="1.6" opacity="0.9"></path>
                     </svg>
                 </div>
                 <h3>Ambiente</h3>
