--- a/index.html
+++ b/index.html
@@ -306,19 +306,19 @@
 <footer id="footer">
     <div class="container">
         <div class="footer-socials">
-            <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram" class="ig">
+            <a href="https://www.instagram.com/fundacionteessa?igsh=dXgzNnNibmFmM2Vt" target="_blank" aria-label="Instagram" class="ig">
                 <img src="img/instagram.svg" alt="Instagram">
             </a>
 
-            <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook" class="fb">
+            <a href="https://www.facebook.com/fundacionteessa/" target="_blank" aria-label="Facebook" class="fb">
                 <img src="img/facebook.svg" alt="Facebook">
             </a>
 
-            <a href="https://wa.me/549XXXXXXXXXX" target="_blank" aria-label="WhatsApp" class="wa">
+            <a href="https://wa.me/5492657333888?text=Hola%20me%20gustaria%20recibir%20informacion%20sobre%20la%20fundacion" target="_blank" aria-label="WhatsApp" class="wa">
                 <img src="img/whatsapp-svgrepo-com.svg" alt="WhatsApp">
             </a>
 
-            <a href="mailto:contacto@tudominio.com" aria-label="Email" class="mail">
+            <a href="mailto:fundacionteessa@gmail.com" aria-label="Email" class="mail">
                 <img src="img/mail-svgrepo-com.svg" alt="Email">
             </a>
         </div>
