--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     </div>
 </section>
 
-<section id="impact">
+<!-- <section id="impact">
     <div class="container">
         <h2 class="section-title">Nuestro Impacto</h2>
     </div>
@@ -301,7 +301,7 @@
     <div class="container">
         <h2 class="section-title">Voluntariado</h2>
     </div>
-</section>
+</section> -->
 
 <footer id="footer">
     <div class="container">
@@ -324,7 +324,7 @@
         </div>
 
         <p class="footer-text">
-            © 2025 · Todos los derechos reservados
+            © 2026 · Todos los derechos reservados
         </p>
     </div>
 </footer>
