--- a/index.html
+++ b/index.html
@@ -147,11 +147,14 @@
     <div class="container">
         <h2 class="section-title">Programas y Participación</h2>
 
-        <div class="card section-card">
-            <!-- <h3>Nuestros Programas</h3> -->
+        <div class="card section-card programs-card">
+            <h3>Nuestros Programas</h3>
+            <p class="programs-intro">
+                Impulsamos espacios de aprendizaje, encuentro y acompañamiento para transformar ideas en oportunidades reales.
+            </p>
 
             <div class="programs-layout">
-                <div>
+                <div class="programs-main">
                     <h4>Programas</h4>
                     <div class="programs-accordion">
                         <details class="program-item" open>
@@ -188,17 +191,16 @@
 
                 <div class="programs-side">
                     <h4>Cómo participar</h4>
-                    <ul>
-                        <li>Ser miembro de la Fundación</li>
-                        <li>Participar en eventos y actividades</li>
-                        <li>Colaborar como voluntario o donante</li>
-                        <li>Difundir nuestra misión</li>
-                    </ul>
+                    <p>
+                        Sumate como miembro de la fundación, participando de nuestros eventos y actividades,
+                        colaborando como voluntario o donante, difundiendo nuestra misión y acercándonos tu
+                        propuesta de capacitación para juntos hacerla realidad.
+                    </p>
                 </div>
             </div>
 
             <p class="section-cta">
-                Sumarte es ser parte activa de una sociedad más consciente,
+                Sumarte es ser parte activa de la sociedad más consciente,
                 comprometida y preparada para el futuro.
             </p>
         </div>
