--- a/index.html
+++ b/index.html
@@ -339,6 +339,9 @@
 
 <footer id="footer">
     <div class="container">
+        <h2 class="footer-title">Contacto</h2>
+        <p class="footer-lead">Conectate con Fundación TEESSA y acompañá nuestras iniciativas.</p>
+
         <div class="footer-socials">
             <a href="https://www.instagram.com/fundacionteessa?igsh=dXgzNnNibmFmM2Vt" target="_blank" aria-label="Instagram" class="ig">
                 <img src="img/instagram.svg" alt="Instagram">
