--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <nav>
         <ul id="navMenu">
             <li><a href="#home" class="nav-link active">Inicio</a></li>
-            <li><a href="#about" class="nav-link">Quienes somos</a></li>
+            <li><a href="#about" class="nav-link">Quiénes somos</a></li>
             <li><a href="#board" class="nav-link">Consejo de administración</a></li>
             <li><a href="#founders" class="nav-link">Socios fundadores</a></li>
-            <li><a href="#mission-vision-values" class="nav-link">Misión, visión y valores</a></li>
+            <li><a href="#mission-vision-values" class="nav-link">Misión, Visión y Valores</a></li>
             <li><a href="#programs" class="nav-link">Programas y participación</a></li>
-            <li><a href="#projects" class="nav-link">Proyectos</a></li>
+            <li><a href="#events" class="nav-link">Encuentros</a></li>
             <li><a href="#pillars" class="nav-link">Pilares</a></li>
             <li><a href="#footer" class="nav-link">Contacto</a></li>
         </ul>
@@ -60,12 +60,12 @@
         <div class="about-intro">
             <div class="about-intro-text card">
                 <p>
-                    Fundación TEESSA es una entidad creada en agosto del 2024 por un grupo de personas con la convicción de contribuir al mejoramiento de la calidad de vida en sociedad tanto en el ámbito local, provincial, nacional e internacional, investigando, capacitando y concientizando sobre temas relacionados al trabajo, a la educación, a la economía, a la salud, a la seguridad, al ambiente y cualquier otro tema que sea menester en función de las necesidades sociales actuales y potenciales.
+                    Fundación TEESSA es una entidad creada en agosto del 2024 por un grupo de personas con la convicción de contribuir al mejoramiento de la calidad de vida en sociedad, tanto en el ámbito local, provincial, nacional e internacional, investigando, capacitando y concientizando sobre temas relacionados al trabajo, a la educación, a la economía, a la salud, a la seguridad, al ambiente y cualquier otro tema que sea menester en función de las necesidades sociales actuales y potenciales.
                 </p>
             </div>
             <div class="about-intro-media card">
-                <img src="img/quienes-somos.jpeg" alt="Equipo de Fundación TESA" loading="lazy">
-                <img src="img/quienessomos2.jpeg" alt="Actividad de Fundación TESA" loading="lazy">
+                <img src="img/quienes-somos.jpeg" alt="Equipo de Fundación TEESSA" loading="lazy">
+                <img src="img/quienessomos2.jpeg" alt="Actividad de Fundación TEESSA" loading="lazy">
             </div>
         </div>
     </div>
@@ -86,11 +86,34 @@
 <section id="founders">
     <div class="container">
         <h2 class="section-title">Socios fundadores</h2>
-        <div class="card section-card">
-            <p>
-                Los socios fundadores impulsan el origen de la Fundación y sostienen
-                su visión de impacto social con compromiso y participación activa.
-            </p>
+        <div class="card section-card founders-card">
+            <h3>Organigrama</h3>
+
+            <ul class="org-list">
+                <li><span>Presidente:</span> López, Gabriela del Carmen</li>
+                <li><span>Secretaria:</span> Quaranta Romina Soledad</li>
+                <li><span>Tesorera:</span> Condori, Daiana Yanet</li>
+                <li><span>Vocal titular:</span> López Claudia Aljandra</li>
+                <li><span>Vocal suplente:</span> Martínez, Luciano Jesús</li>
+            </ul>
+
+            <h4>Socios Fundadores</h4>
+            <ul class="founders-members">
+                <li>Moyano, Lorena</li>
+                <li>Gil, Daniela</li>
+                <li>Mayo, Ricardo</li>
+                <li>Nieto, Patricia</li>
+                <li>Ortiz, María de los Ángeles</li>
+                <li>Leyes, Javier</li>
+                <li>Fiori, Marcos</li>
+                <li>Devia, Viviana</li>
+                <li>Mithiaux, Mario</li>
+                <li>De Giuseeppe, Ramiro</li>
+                <li>Soria, Néstor</li>
+                <li>Cuello, Patricia</li>
+            </ul>
+
+            <p class="legal-note">Personería jurídica LPJ N° 156/24</p>
         </div>
     </div>
 </section>
@@ -148,7 +171,7 @@
         <h2 class="section-title">Programas y Participación</h2>
 
         <div class="card section-card programs-card">
-            <h3>Nuestros Programas</h3>
+           
             <p class="programs-intro">
                 Impulsamos espacios de aprendizaje, encuentro y acompañamiento para transformar ideas en oportunidades reales.
             </p>
@@ -208,22 +231,29 @@
 </section>
 
 
-<section id="projects">
+<section id="events">
     <div class="container">
-        <h2 class="section-title">Proyectos</h2>
-        <p class="section-intro">Aquí presentamos nuestros proyectos activos y en desarrollo. Podés añadir tarjetas, enlaces o una galería para mostrar cada iniciativa.</p>
-        <div class="content-grid">
-            <div class="card">
-                <h4>Proyecto 1</h4>
-                <p>Descripción corta del proyecto, su objetivo y estado.</p>
+        <h2 class="section-title">Encuentros</h2>
+        <div class="content-grid events-grid">
+            <div class="card event-card">
+                <img src="img/bullying.jpeg" alt="Jornada integral de bullying" class="event-image" loading="lazy">
+                <h4>1) Jornada integral de bullying</h4>
             </div>
-            <div class="card">
-                <h4>Proyecto 2</h4>
-                <p>Descripción corta del proyecto, su objetivo y estado.</p>
+            <div class="card event-card">
+                <img src="img/ciberdelito.jpeg" alt="Conversatorio sobre ciberdelitos y grooming" class="event-image" loading="lazy">
+                <h4>2) Conversatorio sobre ciberdelitos y grooming</h4>
             </div>
-            <div class="card">
-                <h4>Proyecto 3</h4>
-                <p>Descripción corta del proyecto, su objetivo y estado.</p>
+            <div class="card event-card">
+                <img src="img/conexion responsable.jpeg" alt="Programa conexión responsable" class="event-image" loading="lazy">
+                <h4>3) Programa conexión responsable</h4>
+            </div>
+            <div class="card event-card">
+                <img src="img/trabajo infantil.jpeg" alt="Jornada de capacitación contra el trabajo infantil" class="event-image" loading="lazy">
+                <h4>4) Jornada de capacitación contra el trabajo infantil</h4>
+            </div>
+            <div class="card event-card">
+                <img src="img/saludmental.jpeg" alt="Jornada sobre salud mental" class="event-image" loading="lazy">
+                <h4>5) Jornada sobre salud mental</h4>
             </div>
         </div>
     </div>
@@ -340,7 +370,7 @@
 <footer id="footer">
     <div class="container">
         <h2 class="footer-title">Contacto</h2>
-        <p class="footer-lead">Conectate con Fundación TEESSA y acompañá nuestras iniciativas.</p>
+        <p class="footer-lead">Conéctate con Fundación TEESSA y acompañá nuestras iniciativas.</p>
 
         <div class="footer-socials">
             <a href="https://www.instagram.com/fundacionteessa?igsh=dXgzNnNibmFmM2Vt" target="_blank" aria-label="Instagram" class="ig">
@@ -365,6 +395,12 @@
         </p>
     </div>
 </footer>
+
+
+<div id="imageLightbox" class="image-lightbox" aria-hidden="true">
+    <button id="imageLightboxClose" class="image-lightbox-close" aria-label="Cerrar imagen ampliada">×</button>
+    <img id="imageLightboxImg" src="" alt="Imagen ampliada">
+</div>
 
 
 
