--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <button id="sidebarToggle" class="sidebar-toggle" aria-label="Mostrar u ocultar navegación" aria-expanded="true">☰</button>
 
 <aside id="sidebar" class="sidebar" aria-label="Navegación principal">
-    <div class="sidebar-brand">TEESSA</div>
+    <div class="sidebar-brand">
+        <img src="img/TEESSA_Logotipo_Principal_Color_Claim.png" alt="Logo Fundación TEESSA" class="sidebar-logo" loading="lazy">
+    </div>
     <nav>
         <ul id="navMenu">
             <li><a href="#home" class="nav-link active">Inicio</a></li>
